dev/zipkin/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: zipkin
spec:
  ingressClassName: nginx
  tls:
    - hosts:
        - zipkin.dev.dolphin.top
      secretName: tls-secret
  rules:
    - host: zipkin.dev.dolphin.top
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: zipkin
                port:
                  number: 9411
